<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        android:layout_margin="@dimen/_7sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pic_holder" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/Light.Grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivImage" />

            <TextView
                android:maxLines="1"
                android:id="@+id/tvProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/home_list_item_product_name_holder_1"
                android:textAlignment="textStart"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/tvCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/home_list_item_product_name_holder_2"
                android:textColor="@color/Theme.color"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/tvProduct" />

            <LinearLayout
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvCode"
                app:layout_constraintStart_toStartOf="@+id/tvCode"
                app:layout_constraintTop_toBottomOf="@+id/tvCode">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvAdd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/Blue"
                    app:cardCornerRadius="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_12sdp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/home_list_cart" />

                        <TextView
                            android:id="@+id/tvAdd"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/home_list_add"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_8ssp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvDelete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Red"
                    app:cardCornerRadius="@dimen/_5sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_12sdp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/home_list_delete" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/home_list_delete"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_8ssp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>